[Feat] Add image to create event endpoint
